# artifacts

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  contributing.md  getting-started.md
docs/_static/css/: custom.css
src/lisa/artifacts/: manifest.py
tests/: test_manifest.py
